--- a/clasificador de jugadas.ipynb
+++ b/clasificador de jugadas.ipynb
@@ -14,9 +14,13 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python38564bitbd95994910c847b48356da7453cccde7",
-   "display_name": "Python 3.8.5 64-bit",
-   "language": "python"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit (conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -24,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "        S1  C1  S2  C2  S3  C3  S4  C4  S5  C5\n0        1   1   1  13   2   4   2   3   1  12\n1        3  12   3   2   3  11   4   5   2   5\n2        1   9   4   6   1   4   3   2   3   9\n3        1   4   3  13   2  13   2   1   3   6\n4        3  10   2   7   1   2   2  11   4   9\n...     ..  ..  ..  ..  ..  ..  ..  ..  ..  ..\n751440   3   4   1   6   3   6   3   4   1   7\n751441   3   7   1   7   4  10   3   6   1   8\n751442   4   9   1   8   1  11   2  10   2   7\n751443   3   2   1   4   3   2   1   5   2   6\n751444   2   2   4   3   1   4   1   3   2   6\n\n[751445 rows x 10 columns] 0         0\n1         1\n2         1\n3         1\n4         0\n         ..\n751440    4\n751441    4\n751442    4\n751443    4\n751444    4\nName: Clase, Length: 751445, dtype: int64\n"
+      "        S1  C1  S2  C2  S3  C3  S4  C4  S5  C5\n0        1   1   1  13   2   4   2   3   1  12\n1        3  12   3   2   3  11   4   5   2   5\n2        1   9   4   6   1   4   3   2   3   9\n3        1   4   3  13   2  13   2   1   3   6\n4        3  10   2   7   1   2   2  11   4   9\n...     ..  ..  ..  ..  ..  ..  ..  ..  ..  ..\n751440   2   1   4  11   1  10   1  11   3  13\n751441   1   1   1   5   3   2   2   4   1   4\n751442   4   1   3  12   1  10   1  10   3  11\n751443   4   8   4   7   4   7   2   4   1   5\n751444   3   9   1   8   3   7   3   9   3  11\n\n[751445 rows x 10 columns] 0         0\n1         1\n2         1\n3         1\n4         0\n         ..\n751440    4\n751441    4\n751442    4\n751443    4\n751444    4\nName: Clase, Length: 751445, dtype: int64\n"
      ]
     }
    ],
@@ -86,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   param_criterion param_max_depth param_splitter  mean_test_score  \\\n0             gini               1           best         0.225785   \n1             gini               1         random         0.220520   \n2             gini               2           best         0.239586   \n3             gini               2         random         0.239094   \n4             gini               3           best         0.253607   \n5             gini               3         random         0.248638   \n6             gini               4           best         0.259895   \n7             gini               4         random         0.255251   \n8             gini               5           best         0.276884   \n9             gini               5         random         0.268449   \n10            gini               6           best         0.293791   \n11            gini               6         random         0.294576   \n12            gini               7           best         0.319104   \n13            gini               7         random         0.315084   \n14            gini               8           best         0.349242   \n15            gini               8         random         0.320347   \n16            gini               9           best         0.379172   \n17            gini               9         random         0.342012   \n18            gini              10           best         0.412142   \n19            gini              10         random         0.382342   \n20         entropy               1           best         0.225785   \n21         entropy               1         random         0.221231   \n22         entropy               2           best         0.239586   \n23         entropy               2         random         0.236341   \n24         entropy               3           best         0.251253   \n25         entropy               3         random         0.251179   \n26         entropy               4           best         0.259909   \n27         entropy               4         random         0.264705   \n28         entropy               5           best         0.273566   \n29         entropy               5         random         0.273190   \n30         entropy               6           best         0.287201   \n31         entropy               6         random         0.285244   \n32         entropy               7           best         0.312208   \n33         entropy               7         random         0.293111   \n34         entropy               8           best         0.342777   \n35         entropy               8         random         0.320958   \n36         entropy               9           best         0.369861   \n37         entropy               9         random         0.354167   \n38         entropy              10           best         0.398702   \n39         entropy              10         random         0.368884   \n\n    rank_test_score  \n0                37  \n1                40  \n2                33  \n3                35  \n4                29  \n5                32  \n6                27  \n7                28  \n8                21  \n9                24  \n10               17  \n11               16  \n12               13  \n13               14  \n14                8  \n15               12  \n16                4  \n17               10  \n18                1  \n19                3  \n20               37  \n21               39  \n22               33  \n23               36  \n24               30  \n25               31  \n26               26  \n27               25  \n28               22  \n29               23  \n30               19  \n31               20  \n32               15  \n33               18  \n34                9  \n35               11  \n36                5  \n37                7  \n38                2  \n39                6  \n"
+      "   param_criterion param_max_depth param_splitter  mean_test_score  \\\n0             gini               1           best         0.225575   \n1             gini               1         random         0.225250   \n2             gini               4           best         0.264441   \n3             gini               4         random         0.270068   \n4             gini               7           best         0.318030   \n5             gini               7         random         0.309243   \n6             gini               8           best         0.347473   \n7             gini               8         random         0.339141   \n8             gini               9           best         0.376835   \n9             gini               9         random         0.374228   \n10            gini              10           best         0.409097   \n11            gini              10         random         0.365663   \n12         entropy               1           best         0.225575   \n13         entropy               1         random         0.220689   \n14         entropy               4           best         0.258455   \n15         entropy               4         random         0.262241   \n16         entropy               7           best         0.305481   \n17         entropy               7         random         0.310861   \n18         entropy               8           best         0.332774   \n19         entropy               8         random         0.318100   \n20         entropy               9           best         0.363681   \n21         entropy               9         random         0.348531   \n22         entropy              10           best         0.391414   \n23         entropy              10         random         0.361488   \n\n    rank_test_score  \n0                21  \n1                23  \n2                18  \n3                17  \n4                13  \n5                15  \n6                 9  \n7                10  \n8                 3  \n9                 4  \n10                1  \n11                5  \n12               21  \n13               24  \n14               20  \n15               19  \n16               16  \n17               14  \n18               11  \n19               12  \n20                6  \n21                8  \n22                2  \n23                7  \n"
      ]
     }
    ],
@@ -119,18 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'MultinomialNB' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-2b68bf531730>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m######## NAIVE BAYES ##########\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbayes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMultinomialNB\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mval_cruzada\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcross_validate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbayes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_cruzada\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Resulatado Naive Bayes: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_cruzada\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'test_score'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'MultinomialNB' is not defined"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "dict_keys(['fit_time', 'score_time', 'test_score'])\nResulatado Naive Bayes:  [22.83038302 22.64993093 22.5566011 ]\n"
      ]
     }
    ],
@@ -144,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "41.16548782678706\n"
+      "Resultado Arbol de Decisión: 41.05663089114972\n"
      ]
     }
    ],
@@ -225,13 +225,6 @@
     "             threshold_sign,\n",
     "             threshold[node_id]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
