--- a/clasificador de jugadas.ipynb
+++ b/clasificador de jugadas.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   param_criterion param_max_depth param_splitter  mean_test_score  \\\n0             gini               1           best         0.225480   \n1             gini               1         random         0.225420   \n2             gini               4           best         0.259930   \n3             gini               4         random         0.261303   \n4             gini               7           best         0.316774   \n5             gini               7         random         0.290297   \n6             gini               8           best         0.346631   \n7             gini               8         random         0.321041   \n8             gini               9           best         0.377727   \n9             gini               9         random         0.350292   \n10            gini              10           best         0.408651   \n11            gini              10         random         0.367656   \n12         entropy               1           best         0.225480   \n13         entropy               1         random         0.222465   \n14         entropy               4           best         0.258298   \n15         entropy               4         random         0.262585   \n16         entropy               7           best         0.305652   \n17         entropy               7         random         0.294650   \n18         entropy               8           best         0.334263   \n19         entropy               8         random         0.325968   \n20         entropy               9           best         0.365645   \n21         entropy               9         random         0.374702   \n22         entropy              10           best         0.394403   \n23         entropy              10         random         0.365751   \n\n    rank_test_score  \n0                21  \n1                23  \n2                19  \n3                18  \n4                13  \n5                16  \n6                 9  \n7                12  \n8                 3  \n9                 8  \n10                1  \n11                5  \n12               21  \n13               24  \n14               20  \n15               17  \n16               14  \n17               15  \n18               10  \n19               11  \n20                7  \n21                4  \n22                2  \n23                6  \n"
+      "0.149 for {'criterion': 'gini', 'max_depth': 1, 'splitter': 'best'}\n0.147 for {'criterion': 'gini', 'max_depth': 1, 'splitter': 'random'}\n0.214 for {'criterion': 'gini', 'max_depth': 4, 'splitter': 'best'}\n0.218 for {'criterion': 'gini', 'max_depth': 4, 'splitter': 'random'}\n0.307 for {'criterion': 'gini', 'max_depth': 7, 'splitter': 'best'}\n0.298 for {'criterion': 'gini', 'max_depth': 7, 'splitter': 'random'}\n0.354 for {'criterion': 'gini', 'max_depth': 8, 'splitter': 'best'}\n0.340 for {'criterion': 'gini', 'max_depth': 8, 'splitter': 'random'}\n0.401 for {'criterion': 'gini', 'max_depth': 9, 'splitter': 'best'}\n0.395 for {'criterion': 'gini', 'max_depth': 9, 'splitter': 'random'}\n0.440 for {'criterion': 'gini', 'max_depth': 10, 'splitter': 'best'}\n0.437 for {'criterion': 'gini', 'max_depth': 10, 'splitter': 'random'}\n0.149 for {'criterion': 'entropy', 'max_depth': 1, 'splitter': 'best'}\n0.144 for {'criterion': 'entropy', 'max_depth': 1, 'splitter': 'random'}\n0.211 for {'criterion': 'entropy', 'max_depth': 4, 'splitter': 'best'}\n0.229 for {'criterion': 'entropy', 'max_depth': 4, 'splitter': 'random'}\n0.306 for {'criterion': 'entropy', 'max_depth': 7, 'splitter': 'best'}\n0.315 for {'criterion': 'entropy', 'max_depth': 7, 'splitter': 'random'}\n0.354 for {'criterion': 'entropy', 'max_depth': 8, 'splitter': 'best'}\n0.328 for {'criterion': 'entropy', 'max_depth': 8, 'splitter': 'random'}\n0.403 for {'criterion': 'entropy', 'max_depth': 9, 'splitter': 'best'}\n0.392 for {'criterion': 'entropy', 'max_depth': 9, 'splitter': 'random'}\n0.441 for {'criterion': 'entropy', 'max_depth': 10, 'splitter': 'best'}\n0.412 for {'criterion': 'entropy', 'max_depth': 10, 'splitter': 'random'}\n\n   param_criterion param_max_depth param_splitter  mean_test_score  \\\n0             gini               1           best         0.149128   \n1             gini               1         random         0.146988   \n2             gini               4           best         0.214427   \n3             gini               4         random         0.218019   \n4             gini               7           best         0.307129   \n5             gini               7         random         0.298284   \n6             gini               8           best         0.354115   \n7             gini               8         random         0.339628   \n8             gini               9           best         0.401483   \n9             gini               9         random         0.394561   \n10            gini              10           best         0.440448   \n11            gini              10         random         0.436720   \n12         entropy               1           best         0.149128   \n13         entropy               1         random         0.144475   \n14         entropy               4           best         0.211322   \n15         entropy               4         random         0.229342   \n16         entropy               7           best         0.306216   \n17         entropy               7         random         0.314926   \n18         entropy               8           best         0.353512   \n19         entropy               8         random         0.327516   \n20         entropy               9           best         0.402795   \n21         entropy               9         random         0.391638   \n22         entropy              10           best         0.441300   \n23         entropy              10         random         0.411623   \n\n    rank_test_score  \n0                21  \n1                23  \n2                19  \n3                18  \n4                14  \n5                16  \n6                 9  \n7                11  \n8                 6  \n9                 7  \n10                2  \n11                3  \n12               21  \n13               24  \n14               20  \n15               17  \n16               15  \n17               13  \n18               10  \n19               12  \n20                5  \n21                8  \n22                1  \n23                4  \n"
      ]
     }
    ],
@@ -143,20 +143,26 @@
     "clf = GridSearchCV(arboldecision, parametros, cv = 3)\n",
     "clf.fit(X_train, Y_train)\n",
     "clf.cv_results_\n",
-    "df = pd.DataFrame(clf.cv_results_)\n",
-    "print(df[['param_criterion', 'param_max_depth', 'param_splitter', 'mean_test_score', 'rank_test_score' ]])"
+    "resultados = pd.DataFrame(clf.cv_results_)\n",
+    "means = clf.cv_results_['mean_test_score']\n",
+    "stds = clf.cv_results_['std_test_score']\n",
+    "for mean, parametros in zip(means,  clf.cv_results_['params']):\n",
+    "    print(\"%0.3f for %r\" %(mean, parametros))\n",
+    "\n",
+    "print()\n",
+    "print(resultados[['param_criterion', 'param_max_depth', 'param_splitter', 'mean_test_score', 'rank_test_score' ]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Resultado Arbol de Decisión: 41.46318093805934\n"
+      "Resultado Arbol de Decisión: 44.47323157383441\n"
      ]
     }
    ],
@@ -222,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Resultado Naive Bayes:  [22.83357686 22.64114787 22.46238238]\n"
+      "Resultado Naive Bayes:  [15.8235002  16.0133842  15.86471043]\n"
      ]
     }
    ],
@@ -243,25 +249,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.4146318093805934\n",
-      "0.22694808003247077\n",
-      "[[ 64892  14781  26691  26641  17284]\n",
-      " [ 47916  19123  26177  31281  25792]\n",
-      " [ 22962   9025  46301  29933  42068]\n",
-      " [ 15096   6830  22266  60338  45759]\n",
-      " [  4489   3321  10161  11399 120919]]\n",
-      "[[56099 15313 21449 17972 39456]\n",
-      " [57173 13461 18739 16605 44311]\n",
-      " [51882 10289 17182 15173 55763]\n",
-      " [55089  9296 13522 13087 59295]\n",
-      " [59234  4851  8103  7391 70710]]\n"
+      "0.4447323157383441\n",
+      "0.15907435008550194\n",
+      "[[ 60765  12305  11476   7630  23437   4401  18023  12252]\n",
+      " [ 46729  15496  11896   9775  28362   3308  20026  14697]\n",
+      " [ 21910   8102  19749   9298  36361   4219  26873  23777]\n",
+      " [ 16084   6081  10767  19182  38213   2567  27395  30000]\n",
+      " [  2886   1786   3436   2086  79750   7668  19980  32697]\n",
+      " [     0      0      0      0      0 150289      0      0]\n",
+      " [  3918    600   7659   1019  37160   5462  61508  32963]\n",
+      " [   220      2    260      6  15228   2228   4377 127968]]\n",
+      "[[19342   980  1274  6292 17599 38605 23343 42854]\n",
+      " [21222   917  1000  5730 22311 35474 22098 41537]\n",
+      " [20630   523   844  5343 32461 29643 22340 38505]\n",
+      " [23352   904   846  4200 36673 28213 18983 37118]\n",
+      " [32269   506   356  2669 54679 14681 13518 31611]\n",
+      " [25234   175   231  3466 33109 33018 19669 35387]\n",
+      " [23060   600  1220  5799 44063 18321 17537 39689]\n",
+      " [23287   243     0   944 45555 13753  5787 60720]]\n"
      ]
     }
    ],
