Reglas de árbol

--- a/clasificador de jugadas.ipynb
+++ b/clasificador de jugadas.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "from collections import Counter\n",
     "from imblearn.combine import SMOTETomek\n",
     "import graphviz \n",
-    "from sklearn.tree import export_text"
+    "from sklearn.tree import export_text, _tree"
    ]
   },
   {
@@ -93,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "         S1  C1  S2  C2  S3  C3  S4  C4  S5  C5\n851142    4   6   4   1   4   6   4  10   4   4\n41325     3   2   3  12   1   3   1   1   4   6\n207671    2  12   4   2   2   7   4  11   4  13\n902530    2   2   4   2   2   2   1   1   3   1\n390528    1   7   1   5   2   7   3   4   2   4\n...      ..  ..  ..  ..  ..  ..  ..  ..  ..  ..\n740387    3  10   3   3   3   5   3   8   3   9\n998007    4   6   2   8   1   5   3   5   1   8\n590424    1   8   3   6   2   8   1   7   3  10\n878075    4  10   3  11   2  11   3   8   2   8\n1108633   1   2   1   1   3   1   3   1   1   1\n\n[783609 rows x 10 columns] 851142     5\n41325      0\n207671     0\n902530     6\n390528     2\n          ..\n740387     5\n998007     6\n590424     4\n878075     6\n1108633    7\nName: Clase, Length: 783609, dtype: int64\nAntes de SMOTE: Counter({0: 150289, 1: 126833, 2: 14395, 3: 6238, 4: 1156, 5: 598, 6: 423, 7: 62}) \nDespués de SMOTE:  Counter({0: 150289, 1: 150289, 2: 150289, 3: 150289, 5: 150289, 4: 150289, 6: 150289, 7: 150289})\n"
+      "Antes de SMOTE: Counter({0: 150289, 1: 126833, 2: 14395, 3: 6238, 4: 1156, 5: 598, 6: 423, 7: 62}) \nDespués de SMOTE:  Counter({7: 150289, 5: 150286, 6: 150286, 4: 150282, 3: 150186, 2: 149759, 0: 134447, 1: 134049})\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.437 for {'max_depth': 10, 'min_samples_split': 2}\n0.437 for {'max_depth': 10, 'min_samples_split': 4}\n0.437 for {'max_depth': 10, 'min_samples_split': 10}\n0.778 for {'max_depth': 20, 'min_samples_split': 2}\n0.775 for {'max_depth': 20, 'min_samples_split': 4}\n0.766 for {'max_depth': 20, 'min_samples_split': 10}\n0.834 for {'max_depth': 37, 'min_samples_split': 2}\n0.826 for {'max_depth': 37, 'min_samples_split': 4}\n0.808 for {'max_depth': 37, 'min_samples_split': 10}\n0.834 for {'max_depth': 40, 'min_samples_split': 2}\n0.826 for {'max_depth': 40, 'min_samples_split': 4}\n0.808 for {'max_depth': 40, 'min_samples_split': 10}\n\n"
+      "0.448 for {'max_depth': 10, 'min_samples_split': 2}\n0.448 for {'max_depth': 10, 'min_samples_split': 4}\n0.448 for {'max_depth': 10, 'min_samples_split': 10}\n0.790 for {'max_depth': 20, 'min_samples_split': 2}\n0.787 for {'max_depth': 20, 'min_samples_split': 4}\n0.778 for {'max_depth': 20, 'min_samples_split': 10}\n0.846 for {'max_depth': 37, 'min_samples_split': 2}\n0.838 for {'max_depth': 37, 'min_samples_split': 4}\n0.820 for {'max_depth': 37, 'min_samples_split': 10}\n0.846 for {'max_depth': 40, 'min_samples_split': 2}\n0.838 for {'max_depth': 40, 'min_samples_split': 4}\n0.820 for {'max_depth': 40, 'min_samples_split': 10}\n\n"
      ]
     }
    ],
@@ -159,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Resultado Arbol de Decisión: 99.986 con parametros {'max_depth': 37, 'min_samples_split': 2}\n"
+      "Resultado Arbol de Decisión: 99.987 con parametros {'max_depth': 37, 'min_samples_split': 2}\n"
      ]
     }
    ],
@@ -174,6 +174,47 @@
     "model = clf.best_estimator_\n",
     "params = clf.best_params_\n",
     "print('Resultado Arbol de Decisión: %0.3f con parametros %r'%( model.score(X_train,Y_train)*100, params))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-ba7ab8ff4c1b>, line 15)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-15-ba7ab8ff4c1b>\"\u001b[1;36m, line \u001b[1;32m15\u001b[0m\n\u001b[1;33m    print \"{}if {} <= {}:\".format(indent, name, threshold)\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tree_to_code(tree, feature_names):\n",
+    "    tree_ = tree.tree_\n",
+    "    feature_name = [\n",
+    "        feature_names[i] if i != _tree.TREE_UNDEFINED else \"undefined!\"\n",
+    "        for i in tree_.feature\n",
+    "    ]\n",
+    "\n",
+    "    print(\"def tree({}):\".format(\", \".join(feature_names)))\n",
+    "\n",
+    "    def recurse(node, depth):\n",
+    "        indent = \"  \" * depth\n",
+    "        if tree_.feature[node] != _tree.TREE_UNDEFINED:\n",
+    "            name = feature_name[node]\n",
+    "            threshold = tree_.threshold[node]\n",
+    "            print( \"{}if {} <= {}:\".format(indent, name, threshold))\n",
+    "            recurse(tree_.children_left[node], depth + 1)\n",
+    "            print( \"{}else:  # if {} > {}\".format(indent, name, threshold))\n",
+    "            recurse(tree_.children_right[node], depth + 1)\n",
+    "        else:\n",
+    "            print( \"{}return {}\".format(indent, tree_.value[node]))\n",
+    "\n",
+    "    recurse(0, 1)\n",
+    "\n",
+    "tree_to_code(model, list(X_train.columns.values))"
    ]
   },
   {
@@ -259,14 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Resultado Naive Bayes:  [0.20263521 0.20272163 0.20106809]\n"
+      "Resultado Naive Bayes:  [0.20480692 0.20429008 0.20416758]\n"
      ]
     }
    ],
@@ -285,64 +326,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "85.2161113813536 \n",
+      "86.49196943748494 \n",
       "\n",
-      "20.179553032918896 \n",
+      "20.442374009943958 \n",
       "\n",
-      "[[25838 17121  4160  1883   274   143   152    26]\n",
-      " [15681 22813  6386  3451   616    81   319    43]\n",
-      " [ 1755  2917 43608   870   227    17   185    35]\n",
-      " [  444   983   471 47496    61     0    59    17]\n",
-      " [   26    64    39    16 49782     0     3     1]\n",
-      " [    9     7     0     1     0 49649     1     0]\n",
-      " [   14    30    27    16     3     0 49478     5]\n",
-      " [    0     5     5     6     0     0     2 49442]] \n",
+      "[[23655 14689  3986  1686   258    98   135    15]\n",
+      " [13052 20667  6022  3228   610    76   342    45]\n",
+      " [ 1579  2798 43872   859   233    16   189    24]\n",
+      " [  376   904   493 47525    92     2    52    19]\n",
+      " [   33    65    40     8 49509     0     5     0]\n",
+      " [   12     4     1     0     0 49333     0     0]\n",
+      " [    7    34    15    13     2     0 49564     9]\n",
+      " [    0     2     3     5     0     0     0 49702]] \n",
       "\n",
-      "[[22476  3034  1297  2485  5217  3633  3867  7588]\n",
-      " [20397  2833  1126  2278  7797  3367  3126  8466]\n",
-      " [10022  2183  1450  2613 12106  4007  4440 12793]\n",
-      " [ 8043  2367  1008  3128 14201  3658  3513 13613]\n",
-      " [ 7030  1107   418  2034 23345  1789  1937 12271]\n",
-      " [17613     0     0  1190  4897  2668 10317 12982]\n",
-      " [ 5658  1105   610  2580 16581  3462  3191 16386]\n",
-      " [ 2384  1169     0  1837 19586  2007  1503 20974]] \n",
-      "\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.59      0.52      0.55     49597\n",
-      "           1       0.52      0.46      0.49     49390\n",
-      "           2       0.80      0.88      0.84     49614\n",
-      "           3       0.88      0.96      0.92     49531\n",
-      "           4       0.98      1.00      0.99     49931\n",
-      "           5       1.00      1.00      1.00     49667\n",
-      "           6       0.99      1.00      0.99     49573\n",
-      "           7       1.00      1.00      1.00     49460\n",
-      "\n",
-      "    accuracy                           0.85    396763\n",
-      "   macro avg       0.84      0.85      0.85    396763\n",
-      "weighted avg       0.84      0.85      0.85    396763\n",
+      "[[18447  1454  1834  2533  5342  4146  3627  7139]\n",
+      " [16050  1411  1510  2324  7916  3952  2964  7915]\n",
+      " [ 8161  1168  1952  3146 12756  4861  4554 12972]\n",
+      " [ 6428  1136  1530  3621 15023  4253  3657 13815]\n",
+      " [ 5438   538   455  2626 24051  2102  2195 12255]\n",
+      " [14944     0     0  1076  4997  4977 10120 13236]\n",
+      " [ 4546   831   866  2755 17337  3890  3228 16191]\n",
+      " [ 1047  1234     0  3035 20110  1888  1185 21213]] \n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.24      0.45      0.31     49597\n",
-      "           1       0.21      0.06      0.09     49390\n",
-      "           2       0.25      0.03      0.05     49614\n",
-      "           3       0.17      0.06      0.09     49531\n",
-      "           4       0.23      0.47      0.30     49931\n",
-      "           5       0.11      0.05      0.07     49667\n",
-      "           6       0.10      0.06      0.08     49573\n",
-      "           7       0.20      0.42      0.27     49460\n",
+      "           0       0.61      0.53      0.57     44522\n",
+      "           1       0.53      0.47      0.50     44042\n",
+      "           2       0.81      0.89      0.84     49570\n",
+      "           3       0.89      0.96      0.92     49463\n",
+      "           4       0.98      1.00      0.99     49660\n",
+      "           5       1.00      1.00      1.00     49350\n",
+      "           6       0.99      1.00      0.99     49644\n",
+      "           7       1.00      1.00      1.00     49712\n",
       "\n",
-      "    accuracy                           0.20    396763\n",
-      "   macro avg       0.19      0.20      0.16    396763\n",
-      "weighted avg       0.19      0.20      0.16    396763\n",
+      "    accuracy                           0.86    385963\n",
+      "   macro avg       0.85      0.86      0.85    385963\n",
+      "weighted avg       0.86      0.86      0.86    385963\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.25      0.41      0.31     44522\n",
+      "           1       0.18      0.03      0.05     44042\n",
+      "           2       0.24      0.04      0.07     49570\n",
+      "           3       0.17      0.07      0.10     49463\n",
+      "           4       0.22      0.48      0.31     49660\n",
+      "           5       0.17      0.10      0.13     49350\n",
+      "           6       0.10      0.07      0.08     49644\n",
+      "           7       0.20      0.43      0.27     49712\n",
+      "\n",
+      "    accuracy                           0.20    385963\n",
+      "   macro avg       0.19      0.20      0.16    385963\n",
+      "weighted avg       0.19      0.20      0.16    385963\n",
       "\n"
      ]
     }
